...
}

@PreviewComponents
@Composable
private fun PrimaryActionButtonPreview() {
    SpaceSaverTheme {
        PrimaryActionButton(text = "Start batch 1", onClick = {})
    }
}

